# Agentic_Product_manager

./: .gitignore  README.md  main.py  requirements.txt  streamlit_app.py
crew/: agents.py  agents.yaml  crew.py  pyproject.toml  tasks.py  tasks.yaml
dashboard/: app.py
engine/: bayesian.py  decision_rule.py  memory.py  schemas.py  simulator.py
memory/: experiment_memory.json
tests/: test_bayesian.py  test_decision_rule.py  test_simulator.py
