[project]
name = "experiment"
version = "0.1.0"
description = "experiment using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
experiment = "experiment.main:run"
run_crew = "experiment.main:run"
train = "experiment.main:train"
replay = "experiment.main:replay"
test = "experiment.main:test"
run_with_trigger = "experiment.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
